packages/react/src/components/Radio/Radio.css
.hearth-Radio {
  cursor: pointer;

  * {
    cursor: pointer;
  }

  .hearth-RadioContainer {
    width: 40px;
    height: 40px;
    margin: -8px;
  }

  .hearth-RadioItem {
    all: unset;
    height: 20px;
    width: 20px;
    background-color: var(--h-radio-unchecked-background-color);
    border-radius: var(--h-radio-border-radius);
    border-style: solid;
    border-width: var(--h-radio-border-width);
    border-color: var(--h-radio-unchecked-border-color);

    &:where(:focus-visible) {
      outline: 2px solid var(--h-focus-border);
      outline-offset: 1px;
    }

    &:where([data-state='checked']) {
      border-color: var(--h-radio-checked-color);
    }

    @media (hover: hover) {
      &:where(:hover:enabled) {
        box-shadow: 0 0 0 var(--h-radio-outline-width) var(--h-radio-outline-color-hover);
      }
    }

    &:where(:active):not([data-state='unchecked']) {
      box-shadow: 0 0 0 var(--h-radio-outline-width) var(--h-radio-outline-color-active);
    }
  }

  /* ensure the gap between the checkbox & label is clickable */
  .hearth-RadioLabel {
    position: relative;

    &::before {
      content: '';
      position: absolute;
      height: 100%;
      width: 100%;
      left: -8px;
    }
  }
}

.hearth-RadioIndicator {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  position: relative;

  &::after {
    content: '';
    display: block;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    background-color: var(--h-radio-checked-color);
  }
}

